2010-10-18

	lib/select.c: Memory allocation bug found by Luis Balona
	removed.

2010-08-01 Jens Thoms Toerring    <jt@toerring.de>

	doc/part3_choice_objects.texi, doc/part3_valuatorobjects.texi:
	Added documentation for functions to set the repeat rate for
	sliders and browser scrollbars.

2010-06-20 Jens Thoms Toerring    <jt@toerring.de>

	lib/slider.c: Doubled the time we wait immediately
	after a mouse button has pressed in a slider "through"
	to give the user more time to release the button before
	"jumping" sets in.

	lib/objects.c: Recognition of "^[" as meaning the <ESC>
	key as shortcut key was broken.

	lib/fselect.c: When a callnback is set for a file selector
	<ENTER> now has the same function as a double-click. "Dismiss"
	button was renamed "Close" and now has shortcut keys.

	lib/browser.c: Added function proposed by Michal Szymanski
	that allows to set the speed with which the browsers scroll-
	bar "jump".

2010-06-13 Jens Thoms Toerring    <jt@toerring.de>

	lib/tabfolder.c: Serge Bromow found that under Gnome the
	contents of a tabfolder weren't positioned correctly,
	hopefully fixed.

	lib/input.c, xtext.c: As serge Bromow pointed out selection
	was not always drawn correctly if the text in an input object
	was longer than the width of the object.

2010-05-24 Jens Thoms Toerring    <jt@toerring.de>

	* lib/spinner.c: Werner Heisch found a bug in the
	float spinner that kept the user from editing the
	value.

2010-05-23 Jens Thoms Toerring    <jt@toerring.de>

	* lib/flinternals.h, browser.c, objects.c, input.c: Moved
	duplicate code in brower and input module into a function
	in objects.c.

2010-05-22 Jens Thoms Toerring    <jt@toerring.de>

	* doc: Paul Nicholson put a lot of work into correcting
	all kinds of issue with the documentation!

	* lib/input.c: in some situations in a multi-line
	input object parts of the scrollbar were drawn even
	though no scrollbars were suposed to be shown.

	* lib/xyplot.c: Active xyplot was broken.
